[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/inventory/assets/inventory_slot.png" type="Texture" id=1]
[ext_resource path="res://ui/inventory/assets/wood_icon.png" type="Texture" id=2]
[ext_resource path="res://ui/common_assets/axe_icon.png" type="Texture" id=3]
[ext_resource path="res://ui/inventory/inventory_ui.gd" type="Script" id=4]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=5]

[node name="Inventory" type="HBoxContainer"]
margin_right = 54.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolSlot" type="TextureRect" parent="."]
margin_right = 26.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="ToolIcon" type="TextureRect" parent="ToolSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot" type="TextureRect" parent="."]
margin_left = 28.0
margin_right = 54.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="ItemIcon" type="TextureRect" parent="ItemSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemCounter" type="Label" parent="ItemSlot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = -4.0
margin_bottom = -1.0
grow_horizontal = 0
theme = ExtResource( 5 )
text = "1"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
